chore: add eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "outDir": "./dist",
     "module": "commonjs",
-    "target": "es2019"
+    "target": "es2019",
+    "esModuleInterop": true,
+    "allowJs": true
   }
 }
