--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
     "es6": true,
     "node": true
   },
-  "extends": ["standard"],
+  "extends": ["standard-with-typescript"],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
@@ -11,15 +11,17 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 11,
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "comma-spacing": "off",
     "comma-dangle": "off",
-    "semi": "off",
-    "no-return-await": "off",
-    "no-undef": "off",
-    "space-before-function-paren": "off"
+    "@typescript-eslint/comma-spacing": "off",
+    "@typescript-eslint/semi": "off",
+    "@typescript-eslint/no-return-await": "off",
+    "@typescript-eslint/no-undef": "off",
+    "@typescript-eslint/space-before-function-paren": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off"
   }
 }
